--- a/views/admin-login.html
+++ b/views/admin-login.html
@@ -13,6 +13,7 @@
   
 <link rel="manifest" href="/manifest.json">
 <meta name="theme-color" content="#2b5329">
+<link rel="stylesheet" href="/css/modern.css">
   <style>
     body {
       display: flex;
@@ -114,6 +115,7 @@
 
   <script src="/js/script.js"></script>
   <script src="/js/global.js"></script>
+<script src="/js/ui-enhance.js" defer></script>
 
 </body>
 </html>
