--- a/views/admin.html
+++ b/views/admin.html
@@ -103,6 +103,8 @@
 </style>
   <link rel="stylesheet" href="/css/premium.css">
   <script defer src="/js/ui.js"></script>
+
+  <link rel="stylesheet" href="/css/modern.css">
 </head>
 <body class="theme-dark-premium">
 <header class="brandbar">
@@ -479,6 +481,7 @@
 </script>
 
   <script src="/js/global.js"></script>
+<script src="/js/ui-enhance.js" defer></script>
 
 </body>
 </html>
