--- a/views/home.html
+++ b/views/home.html
@@ -103,7 +103,7 @@ font-family: 'Heebo', Arial, sans-serif;
     }
   </style>
   <link rel="stylesheet" href="/css/premium.css">
-  <script defer src="/js/ui.js"></script>
+  <script defer src="/js/ui.js"></script><link rel="stylesheet" href="/css/modern.css">
 </head>
 <body class="theme-dark-premium">
 
@@ -183,6 +183,7 @@ font-family: 'Heebo', Arial, sans-serif;
     <p class="footer-tip" style="font-size: x-large; font-weight: bold;">💡 שמרו את האתר במסך הבית כדי להשתמש בו כאפליקציה!</p>
   </div>
   <script src="/js/global.js"></script>
+<script src="/js/ui-enhance.js" defer></script>
 
 </body>
 </html>
