--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,7 @@
 
   <link rel="stylesheet" href="/css/style.css?v=2">
   <link rel="stylesheet" href="/css/premium.css">
-  <script defer src="/js/ui.js"></script>
+  <script defer src="/js/ui.js"></script><link rel="stylesheet" href="/css/modern.css">
 </head>
 
 <style>
@@ -129,6 +129,7 @@
     <p id="status"></p>
   </form>
   <script src="/js/global.js"></script>
+<script src="/js/ui-enhance.js" defer></script>
 
   <script src="/js/script.js"></script>
 </body>
