--- a/views/invoices.html
+++ b/views/invoices.html
@@ -208,7 +208,7 @@ input[type="file"] {
   </style>
 
   <link rel="stylesheet" href="/css/premium.css">
-  <script defer src="/js/ui.js"></script>
+  <script defer src="/js/ui.js"></script><link rel="stylesheet" href="/css/modern.css">
 </head>
 <body class="theme-dark-premium">
 <header class="brandbar">
@@ -428,5 +428,6 @@ fileInput.addEventListener('change', () => {
 
   </script>
   <script src="/js/global.js"></script>
+<script src="/js/ui-enhance.js" defer></script>
 </body>
 </html>
