--- a/views/dispersals.html
+++ b/views/dispersals.html
@@ -213,8 +213,10 @@
     }
   </style>
 
-  <link rel="stylesheet" href="/css/premium.css">
-  <script defer src="/js/ui.js"></script>
+  
+<link rel="stylesheet" href="/css/premium.css">
+<link rel="stylesheet" href="/css/modern.css">
+<script defer src="/js/ui.js"></script>
 </head>
 <body>
   <header class="brandbar">
@@ -463,6 +465,7 @@
     })();
   </script>
   <script src="/js/global.js"></script>
+<script src="/js/ui-enhance.js" defer></script>
 
 </body>
 </html>
