--- a/views/manage.html
+++ b/views/manage.html
@@ -13,6 +13,7 @@
 <meta name="theme-color" content="#2b5329">
   <link rel="stylesheet" href="/css/premium.css">
   <script defer src="/js/ui.js"></script>
+  <link rel="stylesheet" href="/css/modern.css">
 </head>
 <style>
     @media (max-width: 600px) {
@@ -192,6 +193,7 @@
 
   <script src="/js/manage.js"></script>
   <script src="/js/global.js"></script>
+<script src="/js/ui-enhance.js" defer></script>
 
 </body>
 </html>
