--- a/views/orders.html
+++ b/views/orders.html
@@ -34,6 +34,7 @@
   </style>
   <link rel="stylesheet" href="/css/premium.css">
   <script defer src="/js/ui.js"></script>
+  <link rel="stylesheet" href="/css/modern.css">
 </head>
 <header class="brandbar">
   <div class="brandbar-left">
@@ -236,6 +237,7 @@ document.getElementById('dateInput').addEventListener('change', updateWeekdayHin
     dateInput.value = today;
   </script>
   <script src="/js/global.js"></script>
+<script src="/js/ui-enhance.js" defer></script>
 
 </body>
 </html>
