--- a/views/suppliers.html
+++ b/views/suppliers.html
@@ -120,7 +120,7 @@
     }
   </style>
   <link rel="stylesheet" href="/css/premium.css">
-  <script defer src="/js/ui.js"></script>
+  <script defer src="/js/ui.js"></script><link rel="stylesheet" href="/css/modern.css">
 </head>
 <header class="brandbar">
   <div class="brandbar-left">
@@ -397,6 +397,7 @@ function renderTable(){
     loadSuppliers();
   </script>
   <script src="/js/global.js"></script>
+<script src="/js/ui-enhance.js" defer></script>
   
 </body>
 </html>
