--- a/views/tasks.html
+++ b/views/tasks.html
@@ -11,7 +11,9 @@
 
   <link rel="stylesheet" href="/css/style.css?v=2" />
   <link rel="stylesheet" href="/css/premium.css" />
+  <link rel="stylesheet" href="/css/modern.css">
 </head>
+
 <body class="theme-dark-premium">
 <style>
     #tasksTable {
@@ -319,5 +321,6 @@ async function editTask(id, oldName, oldCategory) {
   loadTasks();
 </script>
 <script src="/js/global.js"></script>
+<script src="/js/ui-enhance.js" defer></script>
 </body>
 </html>
