--- a/views/home.html
+++ b/views/home.html
@@ -104,8 +104,38 @@ font-family: 'Heebo', Arial, sans-serif;
   </style>
   <link rel="stylesheet" href="/css/premium.css">
   <script defer src="/js/ui.js"></script><link rel="stylesheet" href="/css/modern.css">
+
+  <link rel="stylesheet" href="/public/css/home.css">
 </head>
 <body class="theme-dark-premium">
+<div class="loader" aria-hidden="true"><div class="spinner"></div></div>
+
+<header class="navwrap">
+  <div class="container nav">
+    <div class="brand"><div class="logo"></div><div>Manager Pro</div></div>
+    <nav class="nav-links">
+      <a href="/views/index.html">דשבורד</a>
+      <a href="/views/manage.html">ניהול משמרות</a>
+      <a href="/views/invoices.html">חשבוניות</a>
+      <a href="/views/suppliers.html">ספקים</a>
+      <a href="/views/tasks.html">משימות</a>
+      <a href="/views/admin.html">אדמין</a>
+    </nav>
+    <div class="nav-cta">
+      <button class="btn secondary" onclick="location.href='/views/admin-login.html'">כניסת מנהלים</button>
+      <button class="burger" aria-label="תפריט"></button>
+    </div>
+  </div>
+  <div class="drawer"><div class="sheet">
+    <a href="/views/index.html">דשבורד</a>
+    <a href="/views/manage.html">ניהול משמרות</a>
+    <a href="/views/invoices.html">חשבוניות</a>
+    <a href="/views/suppliers.html">ספקים</a>
+    <a href="/views/tasks.html">משימות</a>
+    <a href="/views/admin.html">אדמין</a>
+  </div></div>
+</header>
+
 
 <header class="brandbar">
   <div class="brandbar-left">
@@ -185,5 +215,7 @@ font-family: 'Heebo', Arial, sans-serif;
   <script src="/js/global.js"></script>
 <script src="/js/ui-enhance.js" defer></script>
 
+
+<script src="/public/js/ui.js"></script>
 </body>
 </html>
