--- a/views/manage.html
+++ b/views/manage.html
@@ -14,6 +14,8 @@
   <link rel="stylesheet" href="/css/premium.css">
   <script defer src="/js/ui.js"></script>
   <link rel="stylesheet" href="/css/modern.css">
+
+  <link rel="stylesheet" href="/public/css/manage.css">
 </head>
 <style>
     @media (max-width: 600px) {
@@ -94,6 +96,34 @@
   }
 </style>
 <body class="theme-dark-premium">
+<div class="loader" aria-hidden="true"><div class="spinner"></div></div>
+
+<header class="navwrap">
+  <div class="container nav">
+    <div class="brand"><div class="logo"></div><div>Manager Pro</div></div>
+    <nav class="nav-links">
+      <a href="/views/index.html">דשבורד</a>
+      <a href="/views/manage.html">ניהול משמרות</a>
+      <a href="/views/invoices.html">חשבוניות</a>
+      <a href="/views/suppliers.html">ספקים</a>
+      <a href="/views/tasks.html">משימות</a>
+      <a href="/views/admin.html">אדמין</a>
+    </nav>
+    <div class="nav-cta">
+      <button class="btn secondary" onclick="location.href='/views/admin-login.html'">כניסת מנהלים</button>
+      <button class="burger" aria-label="תפריט"></button>
+    </div>
+  </div>
+  <div class="drawer"><div class="sheet">
+    <a href="/views/index.html">דשבורד</a>
+    <a href="/views/manage.html">ניהול משמרות</a>
+    <a href="/views/invoices.html">חשבוניות</a>
+    <a href="/views/suppliers.html">ספקים</a>
+    <a href="/views/tasks.html">משימות</a>
+    <a href="/views/admin.html">אדמין</a>
+  </div></div>
+</header>
+
 <header class="brandbar">
   <div class="brandbar-left">
     <span class="burger" id="burger">&#9776;</span>
@@ -195,5 +225,7 @@
   <script src="/js/global.js"></script>
 <script src="/js/ui-enhance.js" defer></script>
 
+
+<script src="/public/js/ui.js"></script>
 </body>
 </html>
