--- a/views/orders.html
+++ b/views/orders.html
@@ -35,6 +35,8 @@
   <link rel="stylesheet" href="/css/premium.css">
   <script defer src="/js/ui.js"></script>
   <link rel="stylesheet" href="/css/modern.css">
+
+  <link rel="stylesheet" href="/public/css/orders.css">
 </head>
 <header class="brandbar">
   <div class="brandbar-left">
@@ -239,5 +241,7 @@ document.getElementById('dateInput').addEventListener('change', updateWeekdayHin
   <script src="/js/global.js"></script>
 <script src="/js/ui-enhance.js" defer></script>
 
+
+<script src="/public/js/ui.js"></script>
 </body>
 </html>
