--- a/views/suppliers.html
+++ b/views/suppliers.html
@@ -121,6 +121,8 @@
   </style>
   <link rel="stylesheet" href="/css/premium.css">
   <script defer src="/js/ui.js"></script><link rel="stylesheet" href="/css/modern.css">
+
+  <link rel="stylesheet" href="/public/css/suppliers.css">
 </head>
 <header class="brandbar">
   <div class="brandbar-left">
@@ -399,5 +401,7 @@ function renderTable(){
   <script src="/js/global.js"></script>
 <script src="/js/ui-enhance.js" defer></script>
   
+
+<script src="/public/js/ui.js"></script>
 </body>
 </html>
