--- a/views/suppliers.html
+++ b/views/suppliers.html
@@ -120,7 +120,7 @@
     }
   </style>
   <link rel="stylesheet" href="/css/premium.css">
-  <script defer src="/js/ui.js"></script><link rel="stylesheet" href="/css/modern.css">
+  <script defer src="/js/ui.js"></script>
 
   <link rel="stylesheet" href="/public/css/suppliers.css">
 </head>
