--- a/views/home.html
+++ b/views/home.html
@@ -11,7 +11,7 @@
 <script src="https://unpkg.com/lucide@latest"></script>
 
   <title>מערכת ניהול משמרות • דף הבית</title>
-  <link rel="stylesheet" href="/css/style.css" />
+  
 <link rel="manifest" href="/manifest.json">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="default">
@@ -103,7 +103,7 @@ font-family: 'Heebo', Arial, sans-serif;
     }
   </style>
   <link rel="stylesheet" href="/css/premium.css">
-  <script defer src="/js/ui.js"></script><link rel="stylesheet" href="/css/modern.css">
+  <script defer src="/js/ui.js"></script>
 
   <link rel="stylesheet" href="/public/css/home.css">
 </head>
