--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,7 @@
 
   <link rel="stylesheet" href="/css/style.css?v=2">
   <link rel="stylesheet" href="/css/premium.css">
-  <script defer src="/js/ui.js"></script><link rel="stylesheet" href="/css/modern.css">
+  <script defer src="/js/ui.js"></script>
 
   <link rel="stylesheet" href="/public/css/index.css">
 </head>
