--- a/views/invoices.html
+++ b/views/invoices.html
@@ -208,7 +208,7 @@ input[type="file"] {
   </style>
 
   <link rel="stylesheet" href="/css/premium.css">
-  <script defer src="/js/ui.js"></script><link rel="stylesheet" href="/css/modern.css">
+  <script defer src="/js/ui.js"></script>
 
   <link rel="stylesheet" href="/public/css/invoices.css">
 </head>
