--- a/views/admin-login.html
+++ b/views/admin-login.html
@@ -98,7 +98,7 @@
   <link rel="stylesheet" href="/css/premium.css">
   <script defer src="/js/ui.js"></script>
 
-  <link rel="stylesheet" href="/public/css/admin-login.css">
+  <link rel="stylesheet" href="/css/admin-login.css">
 </head>
 <body class="theme-dark-premium">
 <div class="loader" aria-hidden="true"><div class="spinner"></div></div>
@@ -148,6 +148,6 @@
 <script src="/js/ui-enhance.js" defer></script>
 
 
-<script src="/public/js/ui.js"></script>
+<script src="/js/ui.js"></script>
 </body>
 </html>
