--- a/views/admin.html
+++ b/views/admin.html
@@ -106,7 +106,7 @@
 
   
 
-  <link rel="stylesheet" href="/public/css/admin.css">
+  <link rel="stylesheet" href="/css/admin.css">
 </head>
 <body class="theme-dark-premium">
 <div class="loader" aria-hidden="true"><div class="spinner"></div></div>
@@ -514,6 +514,6 @@
 <script src="/js/ui-enhance.js" defer></script>
 
 
-<script src="/public/js/ui.js"></script>
+<script src="/js/ui.js"></script>
 </body>
 </html>
