--- a/views/dispersals.html
+++ b/views/dispersals.html
@@ -218,7 +218,7 @@
 
 <script defer src="/js/ui.js"></script>
 
-  <link rel="stylesheet" href="/public/css/dispersals.css">
+  <link rel="stylesheet" href="/css/dispersals.css">
 </head>
 <body>
 <div class="loader" aria-hidden="true"><div class="spinner"></div></div>
@@ -498,6 +498,6 @@
 <script src="/js/ui-enhance.js" defer></script>
 
 
-<script src="/public/js/ui.js"></script>
+<script src="/js/ui.js"></script>
 </body>
 </html>
