--- a/views/home.html
+++ b/views/home.html
@@ -105,7 +105,7 @@ font-family: 'Heebo', Arial, sans-serif;
   <link rel="stylesheet" href="/css/premium.css">
   <script defer src="/js/ui.js"></script>
 
-  <link rel="stylesheet" href="/public/css/home.css">
+  <link rel="stylesheet" href="/css/home.css">
 </head>
 <body class="theme-dark-premium">
 <div class="loader" aria-hidden="true"><div class="spinner"></div></div>
@@ -216,6 +216,6 @@ font-family: 'Heebo', Arial, sans-serif;
 <script src="/js/ui-enhance.js" defer></script>
 
 
-<script src="/public/js/ui.js"></script>
+<script src="/js/ui.js"></script>
 </body>
 </html>
