--- a/views/orders.html
+++ b/views/orders.html
@@ -36,7 +36,7 @@
   <script defer src="/js/ui.js"></script>
   
 
-  <link rel="stylesheet" href="/public/css/orders.css">
+  <link rel="stylesheet" href="/css/orders.css">
 </head>
 <header class="brandbar">
   <div class="brandbar-left">
@@ -242,6 +242,6 @@ document.getElementById('dateInput').addEventListener('change', updateWeekdayHin
 <script src="/js/ui-enhance.js" defer></script>
 
 
-<script src="/public/js/ui.js"></script>
+<script src="/js/ui.js"></script>
 </body>
 </html>
