--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Manager • דשבורד</title>
-  <link rel="stylesheet" href="/public/css/index.css">
+  <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
 
@@ -82,7 +82,7 @@
   </div>
 </main>
 
-<script src="/public/js/ui.js"></script>
+<script src="/js/ui.js"></script>
 <script>
 // Simulate skeleton removal
 window.addEventListener('load', ()=>{
