--- a/views/invoices.html
+++ b/views/invoices.html
@@ -210,7 +210,7 @@ input[type="file"] {
   <link rel="stylesheet" href="/css/premium.css">
   <script defer src="/js/ui.js"></script>
 
-  <link rel="stylesheet" href="/public/css/invoices.css">
+  <link rel="stylesheet" href="/css/invoices.css">
 </head>
 <body class="theme-dark-premium">
 <div class="loader" aria-hidden="true"><div class="spinner"></div></div>
@@ -460,6 +460,6 @@ fileInput.addEventListener('change', () => {
   <script src="/js/global.js"></script>
 <script src="/js/ui-enhance.js" defer></script>
 
-<script src="/public/js/ui.js"></script>
+<script src="/js/ui.js"></script>
 </body>
 </html>
