--- a/views/manage.html
+++ b/views/manage.html
@@ -15,7 +15,7 @@
   <script defer src="/js/ui.js"></script>
   
 
-  <link rel="stylesheet" href="/public/css/manage.css">
+  <link rel="stylesheet" href="/css/manage.css">
 </head>
 <style>
     @media (max-width: 600px) {
@@ -226,6 +226,6 @@
 <script src="/js/ui-enhance.js" defer></script>
 
 
-<script src="/public/js/ui.js"></script>
+<script src="/js/ui.js"></script>
 </body>
 </html>
