--- a/views/suppliers.html
+++ b/views/suppliers.html
@@ -122,7 +122,7 @@
   <link rel="stylesheet" href="/css/premium.css">
   <script defer src="/js/ui.js"></script>
 
-  <link rel="stylesheet" href="/public/css/suppliers.css">
+  <link rel="stylesheet" href="/css/suppliers.css">
 </head>
 <header class="brandbar">
   <div class="brandbar-left">
@@ -402,6 +402,6 @@ function renderTable(){
 <script src="/js/ui-enhance.js" defer></script>
   
 
-<script src="/public/js/ui.js"></script>
+<script src="/js/ui.js"></script>
 </body>
 </html>
