--- a/views/tasks.html
+++ b/views/tasks.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="/css/premium.css" />
   
 
-  <link rel="stylesheet" href="/public/css/tasks.css">
+  <link rel="stylesheet" href="/css/tasks.css">
 </head>
 
 <body class="theme-dark-premium">
@@ -353,6 +353,6 @@ async function editTask(id, oldName, oldCategory) {
 <script src="/js/global.js"></script>
 <script src="/js/ui-enhance.js" defer></script>
 
-<script src="/public/js/ui.js"></script>
+<script src="/js/ui.js"></script>
 </body>
 </html>
