--- a/views/orders.html
+++ b/views/orders.html
@@ -34,9 +34,7 @@
   </style>
   <link rel="stylesheet" href="/css/premium.css">
   <script defer src="/js/ui.js"></script>
-  
-
-  <link rel="stylesheet" href="/css/orders.css">
+  <link rel="stylesheet" href="/css/modern.css">
 </head>
 <header class="brandbar">
   <div class="brandbar-left">
@@ -241,7 +239,5 @@ document.getElementById('dateInput').addEventListener('change', updateWeekdayHin
   <script src="/js/global.js"></script>
 <script src="/js/ui-enhance.js" defer></script>
 
-
-<script src="/js/ui.js"></script>
 </body>
 </html>
