--- a/views/dispersals.html
+++ b/views/dispersals.html
@@ -215,40 +215,10 @@
 
   
 <link rel="stylesheet" href="/css/premium.css">
-
+<link rel="stylesheet" href="/css/modern.css">
 <script defer src="/js/ui.js"></script>
-
-  <link rel="stylesheet" href="/css/dispersals.css">
 </head>
 <body>
-<div class="loader" aria-hidden="true"><div class="spinner"></div></div>
-
-<header class="navwrap">
-  <div class="container nav">
-    <div class="brand"><div class="logo"></div><div>Manager Pro</div></div>
-    <nav class="nav-links">
-      <a href="/views/index.html">דשבורד</a>
-      <a href="/views/manage.html">ניהול משמרות</a>
-      <a href="/views/invoices.html">חשבוניות</a>
-      <a href="/views/suppliers.html">ספקים</a>
-      <a href="/views/tasks.html">משימות</a>
-      <a href="/views/admin.html">אדמין</a>
-    </nav>
-    <div class="nav-cta">
-      <button class="btn secondary" onclick="location.href='/views/admin-login.html'">כניסת מנהלים</button>
-      <button class="burger" aria-label="תפריט"></button>
-    </div>
-  </div>
-  <div class="drawer"><div class="sheet">
-    <a href="/views/index.html">דשבורד</a>
-    <a href="/views/manage.html">ניהול משמרות</a>
-    <a href="/views/invoices.html">חשבוניות</a>
-    <a href="/views/suppliers.html">ספקים</a>
-    <a href="/views/tasks.html">משימות</a>
-    <a href="/views/admin.html">אדמין</a>
-  </div></div>
-</header>
-
   <header class="brandbar">
     <div class="brandbar-left">
       <span class="burger" id="burger">&#9776;</span>
@@ -497,7 +467,5 @@
   <script src="/js/global.js"></script>
 <script src="/js/ui-enhance.js" defer></script>
 
-
-<script src="/js/ui.js"></script>
 </body>
 </html>
