--- a/views/suppliers.html
+++ b/views/suppliers.html
@@ -120,9 +120,7 @@
     }
   </style>
   <link rel="stylesheet" href="/css/premium.css">
-  <script defer src="/js/ui.js"></script>
-
-  <link rel="stylesheet" href="/css/suppliers.css">
+  <script defer src="/js/ui.js"></script><link rel="stylesheet" href="/css/modern.css">
 </head>
 <header class="brandbar">
   <div class="brandbar-left">
@@ -401,7 +399,5 @@ function renderTable(){
   <script src="/js/global.js"></script>
 <script src="/js/ui-enhance.js" defer></script>
   
-
-<script src="/js/ui.js"></script>
 </body>
 </html>
