--- a/views/index.html
+++ b/views/index.html
@@ -10,8 +10,8 @@
 <script src="https://unpkg.com/lucide@latest"></script>
 
   <link rel="stylesheet" href="/css/style.css?v=2">
-  <link rel="stylesheet" href="/css/premium.css">
-  <script defer src="/js/ui.js"></script><link rel="stylesheet" href="/css/modern.css">
+  
+  <script defer src="/js/ui.js"></script>
 </head>
 
 <style>
