--- a/views/invoices.html
+++ b/views/invoices.html
@@ -207,8 +207,8 @@ input[type="file"] {
     }
   </style>
 
-  <link rel="stylesheet" href="/css/premium.css">
-  <script defer src="/js/ui.js"></script><link rel="stylesheet" href="/css/modern.css">
+  
+  <script defer src="/js/ui.js"></script>
 </head>
 <body class="theme-dark-premium">
 <header class="brandbar">
