--- a/views/suppliers.html
+++ b/views/suppliers.html
@@ -119,8 +119,8 @@
       to { opacity: 1; transform: translateY(0); }
     }
   </style>
-  <link rel="stylesheet" href="/css/premium.css">
-  <script defer src="/js/ui.js"></script><link rel="stylesheet" href="/css/modern.css">
+  
+  <script defer src="/js/ui.js"></script>
 </head>
 <header class="brandbar">
   <div class="brandbar-left">
