--- a/views/dispersals.html
+++ b/views/dispersals.html
@@ -219,15 +219,15 @@
 <script defer src="/js/ui.js"></script>
 </head>
 <body>
-  <header class="brandbar">
-    <div class="brandbar-left">
-      <span class="burger" id="burger">&#9776;</span>
-      <button id="notifToggle" class="icon-btn">
-        <i data-lucide="bell-off"></i>
-      </button>
-    </div>
-    <span class="brand-title">NEW DELI</span>
-  </header>
+<header class="brandbar">
+  <span class="brand-title">NEW DELI</span>
+  <div class="brandbar-right">
+    <button id="notifToggle" class="icon-btn">
+      <i data-lucide="bell-off"></i>
+    </button>
+    <span class="burger" id="burger">&#9776;</span>
+  </div>
+</header>
 
   <nav class="mobile-nav" id="mobileNav">
     <button id="closeNav" class="close-btn">✖</button>
